--- a/web/app/assets/stylesheets/components/me-page.scss
+++ b/web/app/assets/stylesheets/components/me-page.scss
@@ -9,6 +9,7 @@
 
     &--z0 {
       background: $background-z0-color;
+      border-bottom: 1px solid #efefef;
     }
   }
 
@@ -33,12 +34,20 @@
   }
   
   &--events-section {
-    max-width: 600px;
+    max-width: 700px;
     margin: auto;
-    //padding-top: 85px;
-    
     @include mdc-layout-grid-media-query_("phone") {
       padding-top: 45px;
+    }
+
+    &::before {
+      content: close-quote;
+      background: linear-gradient(to top, #fafafa, transparent);
+      position: absolute;
+      width: 100%;
+      height: 145px;
+      left: 0;
+      border-bottom: 1px solid #e4e4e4;
     }
   }
 }
