--- a/web/app/views/components/follow/_follow-chip-set.html.erb
+++ b/web/app/views/components/follow/_follow-chip-set.html.erb
@@ -1,10 +1,10 @@
 <%
 
-  return if chips.blank? || type.blank?
+  raise ArgumentError if chips.blank? || type.blank?
 
   type = local_assigns.fetch(:type)
-  location = local_assigns.fetch(:location, 'single-page')
-
+  event_id = local_assigns.fetch(:event_id)
+  expand_to_similar = local_assigns.fetch(:expand_to_similar, false)
 
 
 %>
@@ -12,8 +12,9 @@
 <div class="me-follow-chip-set mdc-chip-set mdc-chip-set--filter"
      data-controller="follow-chipset"
      data-target="follow-chipset.chipset"
-     data-follow-chipset-location="<%= location %>"
-     id="follow-chip-set__<%= type %>">
+     data-follow-chipset-similar-to="<%= event_id %>"
+     data-follow-chipset-expand-to-similar="<%= expand_to_similar %>"
+     id="<%= "follow-chip-set__#{type}-#{event_id}" %>">
   <% chips.each do |followable| %>
     <div class="mdc-chip <%= 'mdc-chip--selected' if user.following?(followable) %>"
          data-followed="<%= user.following?(followable) %>"
