Create swipable component

--- a/web/app/assets/stylesheets/_variables.scss
+++ b/web/app/assets/stylesheets/_variables.scss
@@ -1,8 +1,12 @@
 $brand-color-left: #2ECC71; // #5EEDDE; // #31916C; // #26B679
 $brand-shadow-color-left: #2BBE69;
-//$brand-color-intersect: #2bb3ae;
 $brand-color-right: #2191FB;
 $brand-color-high-contrast: #0C0F0A; //darken($brand-color, 10%);
+//$brand-color-intersect: #2bb3ae;
+
+$like-color: $brand-color-left;
+$dislike-color: #8F1717;
+$maybe-color: $brand-color-right;
 
 $font-primary-font: 'Cabin';
 $font-secondary-font: 'helvetica', 'Cabin';
