--- a/web/app/views/components/collection/_event.html.erb
+++ b/web/app/views/components/collection/_event.html.erb
@@ -32,8 +32,8 @@
                     aria-hidden="true"
                     aria-pressed="false"
                     style="<%= 'display: inline' if current_user.taste_events_saved?(event.id) %>">
-              <i class="material-icons mdc-icon-button__icon mdc-icon-button__icon--on">mood</i>
-              <i class="material-icons-sharp mdc-icon-button__icon">sentiment_satisfied</i>
+              <i class="material-icons mdc-icon-button__icon mdc-icon-button__icon--on">star</i>
+              <i class="material-icons-sharp mdc-icon-button__icon">star_border</i>
             </button>
           </div>
         </div>
