Adjust suitability to work with swipable component

--- a/web/app/assets/stylesheets/components/me-feed.scss
+++ b/web/app/assets/stylesheets/components/me-feed.scss
@@ -32,6 +32,7 @@ $mdc-layout-grid-columns: (
       max-width: 55%;
       line-height: 1.3em;
       font-size: 24px;
+      font-family: $font-primary-font;
 
       & span {
         font-size: 16px;
