Little adjust in limit of collections

--- a/web/app/views/components/collection/_event.html.erb
+++ b/web/app/views/components/collection/_event.html.erb
@@ -108,7 +108,7 @@
       <%# end %>
       <!--              </div>-->
       <%# if current_user&.admin? %>
-      <%#= event.ml_data['categories'] %>
+      <%#= event.ml_data['personas'] %>
       <!--              <%#= event.first_day_time %> | <%#= event.first_day_time.to_date.yday %>-->
       <%# end %>
     </div>
