--- a/web/app/views/components/collection/_similar.html.erb
+++ b/web/app/views/components/collection/_similar.html.erb
@@ -7,7 +7,7 @@
   if similar_to
     event              = events.detect { |event| event.id == similar_to.to_i } || Event.find(similar_to)
     similar_events_ids = event.similar_data[0...6]
-    similar_events     = Event.where(id: similar_events_ids).not_in_saved(user)
+    similar_events     = Event.where(id: similar_events_ids).active.not_in_saved(user)
     identifier         = local_assigns.fetch(:identifier, 'similar')
   end
 
