--- a/web/app/views/components/collection/_similar.html.erb
+++ b/web/app/views/components/collection/_similar.html.erb
@@ -48,7 +48,7 @@
 
     <div class="me-similar__organizers">
       <%= render partial: 'components/follow/follow-chip-set', locals: {
-          user:              current_user,
+          user:              current_or_guest_user,
           event_id:          event.id,
           chips:             similar_events.map { |similar| similar.organizers[0..3] }.flatten.uniq[0..6].sort,
           type:              'organizers',
