Fix in events helper for images

--- a/web/app/views/events/_form.html.erb
+++ b/web/app/views/events/_form.html.erb
@@ -15,7 +15,7 @@
 
   <div class="mdc-card mdc-card--outlined">
     <div class="my-card__media mdc-card__media mdc-card__media--16-9"
-      style="<%= get_image_style_attr @event, 'single' %>">
+      style="<%= get_image_style_attr @event, :single %>">
     </div>
   </div>
 
