--- a/web/app/views/events/show.html.erb
+++ b/web/app/views/events/show.html.erb
@@ -12,7 +12,7 @@
      data-event-modifier="single">
 
   <div class="me-card__head">
-    <div class="me-card__media" style="<%= get_image_style_attr @event, 'single' %>"></div>
+    <div class="me-card__media" style="<%= get_image_style_attr @event, :single %>"></div>
     <h2 class="me-card__name">
       <%= @event.details_name %>
     </h2>
